--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -326,7 +326,7 @@ a:hover {
 /*  */
 /* #region FOOTER */
 footer {
-  width: 100vw;
+  /* width: 100vw; */
   background-color: var(--footer-bg);
   color: var(--footer-text-color);
   display: flex;
